# GEV-swarm

./: CLAUDE.md  README.md
.github/: copilot-instructions.md
install/: local_setup.sh  setup.sh
install/environment_msgs/share/environment_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/environment_msgs/share/environment_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  (+12 more)
install/my_agent/lib/my_agent/: agent_node  environment_publisher  swarm_cli  swarm_visualizer
install/my_agent/share/my_agent/: package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/environment_msgs/: CMakeLists.txt
src/environment_msgs/msg/: LocalMapUpdate.msg  PredictedMap.msg
src/my_agent/: package.xml  setup.cfg  setup.py
src/my_agent/disabled/: SwarmCommand.msg  swarm_cli.py
src/my_agent/install/: local_setup.sh  setup.sh
src/my_agent/install/my_agent/lib/my_agent/: agent_node  environment_publisher
src/my_agent/install/my_agent/share/my_agent/: package.bash  package.dsv  package.sh  package.xml
src/my_agent/launch/: multi_agent.launch.py
src/my_agent/log/: latest_build
src/my_agent/my_agent/: agent_node  agent_node.py  environment_publisher.py  orca.py  path_planner.py  swarm_ai_node.py  swarm_visualizer.py
src/my_agent/my_agent/install/: local_setup.sh  setup.sh
src/my_agent/my_agent/log/: latest_build
(+94 files in other folders)
