<package format="3">
  <name>my_agent</name>
  <version>0.0.0</version>
  <description>Agent nodes</description>

  <maintainer email="lcata@todo.todo">lcata</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>environment_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
